--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     runtimeOnly 'com.h2database:h2'
+
+    implementation 'org.modelmapper:modelmapper:3.1.0'
     implementation 'org.mapstruct:mapstruct:1.5.2.Final'
     implementation 'org.projectlombok:lombok:1.18.24'
+
+    implementation 'mysql:mysql-connector-java:8.0.15'
+
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.5.2.Final"
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
